--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,91 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Paul's Appointments</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="#">Paul's appointment</a>
+    <nav class="navbar navbar-dark bg-info">
+        <a class="navbar-brand" href="#">Paul's appointments</a>
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h1>Appointments</h1>
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        Add an appointment
+                    </div>
+                    <div class="card-body">
+                        <form>
+													<div class="row">
+															<div class="col-lg-6">
+																	<div class="form-group">
+																			<label for="name">Name</label>
+																			<input type="text" class="form-control" id="name" placeholder="Your name here...">
+																	</div>
+																	<div class="form-group">
+																		<label for="course">Course</label>
+																		<input type="text" class="form-control" id="course" placeholder="Course">
+																	</div>
+																	<div class="form-group">
+																		<label for="notes">Course</label>
+																		<textarea class="form-control" id="notes" placeholder="Notes"></textarea>
+																	</div>
+															</div>
+															<div class="col-lg-6">
+																<div class="form-group">
+																	<label for="date">Date</label>
+																	<input type="date" class="form-control" id="date">
+																</div>
+																<div class="form-group">
+																	<label for="time">Time</label>
+																	<input type="time" class="form-control" id="time">
+																</div>
+															</div>
+													</div>
+													<div class="row">
+														<div class="col align-self-end">
+																<button class="btn btn-danger">Clear</button>
+																<button type="submit" class="btn btn-primary">Add</button>
+														</div>
+													</div>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="col-md-4">
+							<div class="input-group">
+									<input type="text" class="form-control" placeholder="Search" aria-label="Text input with dropdown button">
+									<div class="input-group-btn">
+										<button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											Sort By
+										</button>
+										<div class="dropdown-menu dropdown-menu-right">
+											<a class="dropdown-item" href="#">Name</a>
+											<a class="dropdown-item" href="#">Course</a>
+											<a class="dropdown-item" href="#">Date & Time</a>
+											<div role="separator" class="dropdown-divider"></div>
+											<a class="dropdown-item" href="#">Ascending</a>
+											<a class="dropdown-item" href="#">Descending</a>
+										</div>
+									</div>
+								</div>
+            </div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<h4>Appointments</h4>
+					</div>
+				</div>
+				<div class="card">
+						<div class="card-body">
+							<h4 class="card-title">Student Name</h4><h5>Course</h5>
+							<p class="card-text">Appointment Notes</p>
+							<a href="#" class="btn btn-danger">Delete</a>
+						</div>
+					</div>
     </div>
-    <footer>
+    <footer class="fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -28,8 +98,10 @@
                 </div>
             </div>
         </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+		</footer>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+		<script src="./js/app.js"></script>
 </body>
 </html>
