Basic React components

--- a/src/index.html
+++ b/src/index.html
@@ -13,83 +13,7 @@
     <nav class="navbar navbar-dark bg-info">
         <a class="navbar-brand" href="#">Paul's appointments</a>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header">
-                        Add an appointment
-                    </div>
-                    <div class="card-body">
-                        <form>
-													<div class="row">
-															<div class="col-lg-6">
-																	<div class="form-group">
-																			<label for="name">Name</label>
-																			<input type="text" class="form-control" id="name" placeholder="Your name here...">
-																	</div>
-																	<div class="form-group">
-																		<label for="course">Course</label>
-																		<input type="text" class="form-control" id="course" placeholder="Course">
-																	</div>
-																	<div class="form-group">
-																		<label for="notes">Course</label>
-																		<textarea class="form-control" id="notes" placeholder="Notes"></textarea>
-																	</div>
-															</div>
-															<div class="col-lg-6">
-																<div class="form-group">
-																	<label for="date">Date</label>
-																	<input type="date" class="form-control" id="date">
-																</div>
-																<div class="form-group">
-																	<label for="time">Time</label>
-																	<input type="time" class="form-control" id="time">
-																</div>
-															</div>
-													</div>
-													<div class="row">
-														<div class="col align-self-end">
-																<button class="btn btn-danger">Clear</button>
-																<button type="submit" class="btn btn-primary">Add</button>
-														</div>
-													</div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-							<div class="input-group">
-									<input type="text" class="form-control" placeholder="Search" aria-label="Text input with dropdown button">
-									<div class="input-group-btn">
-										<button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											Sort By
-										</button>
-										<div class="dropdown-menu dropdown-menu-right">
-											<a class="dropdown-item" href="#">Name</a>
-											<a class="dropdown-item" href="#">Course</a>
-											<a class="dropdown-item" href="#">Date & Time</a>
-											<div role="separator" class="dropdown-divider"></div>
-											<a class="dropdown-item" href="#">Ascending</a>
-											<a class="dropdown-item" href="#">Descending</a>
-										</div>
-									</div>
-								</div>
-            </div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<h4>Appointments</h4>
-					</div>
-				</div>
-				<div class="card">
-						<div class="card-body">
-							<h4 class="card-title">Student Name</h4><h5>Course</h5>
-							<p class="card-text">Appointment Notes</p>
-							<a href="#" class="btn btn-danger">Delete</a>
-						</div>
-					</div>
-    </div>
+		<div id="app"></div>
     <footer class="fixed-bottom">
         <div class="container">
             <div class="row">
