--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Paul's Appointments</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="./css/style.css">
+		<script src="https://use.fontawesome.com/a0491be648.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-info">
