--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 		<script src="https://use.fontawesome.com/a0491be648.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-info">
+    <nav class="navbar navbar-dark bg-danger">
         <a class="navbar-brand" href="#">Paul's appointments</a>
     </nav>
 		<div id="app"></div>
